# csv-to-postgres-validator

./: NOTES.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 65e995c575f1_initial_schema.py  a5a68cdb0ac4_create_demo_tables.py
docs/: architecture.md
notebooks/: 01_explore_faers.ipynb
src/faers_validator/: cli.py  enums.py  models.py  partial_date.py
src/faers_validator/db/: engine.py  tables.py
src/faers_validator/ingest/: errors.py  pipeline.py  reader.py  transform.py
tests/: conftest.py  test_demo_model.py  test_errors.py  test_pipeline_integration.py  test_transform.py
tests/.ipynb_checkpoints/: test_demo_model-checkpoint.py
tests/fixtures/: demo_tiny.txt
