[project]
name = "csv-to-postgres-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "testcontainers>=4.14.2",
]
